// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Action Creator: Billing Create should dispatch a chained billing create action 1`] = `
Array [
  Object {
    "meta": Object {
      "onSuccess": [Function],
    },
    "signature": undefined,
    "token": undefined,
  },
]
`;

exports[`Action Creator: Billing Create should update instead of create if account is AWS 1`] = `
Array [
  [Function],
  Object {
    "meta": Object {
      "data": Object {
        "code": "newplan1",
      },
      "method": "PUT",
      "onSuccess": [Function],
      "url": "/account/aws-marketplace/subscription",
    },
    "type": "UPDATE_SUBSCRIPTION",
  },
]
`;
